Almost done with new hangman tests