@@ -1,25 +1,21 @@
 package hangman;
 
-import java.util.List;
-import java.util.Random;
-import java.util.Scanner;
+import java.util.*;
 
 public class HangmanGame {
-    private static final List<String> words = List.of("cat", "dog", "fern", "hedge", "java" , "python", "google");
+    private HangmanGameState state = HangmanGameState.GUESSING;
+    private static final ArrayList<String> words = new ArrayList<>(Arrays.asList("cat", "dog", "heat", "trap", "knock", "treat", "class", "reach", "wrong", "flood", "look", "give"));
     private static final Random random = new Random();
     private final Scanner in;
     // Protected so that the tests can access it
-    private final Hangman hangman;
-    private final String wordToGuess;
+    private Hangman hangman;
+    private String wordToGuess;
 
     /**
      * default constructor
-     * @param wordToGuess Given word to guess
      */
-    public HangmanGame(String wordToGuess) {
+    public HangmanGame() {
         this.in = new Scanner(System.in);
-        this.wordToGuess = wordToGuess;
-        this.hangman = new Hangman(wordToGuess);
     }
 
     public Hangman getHangman() {
@@ -31,13 +27,14 @@ public class HangmanGame {
      * and returns hangman
      * and missed letters
      * and the guessed sequence
+     *
      * @return String of hangman
      */
     public String displayHangman() {
         String hangmanDisplay = HangmanUIStates.hangmanString(hangman.getNumberWrongGuesses());
         return String.format(
 
-                        "%sMissed Letters: %s%n" +
+                "%sMissed Letters: %s%n" +
                         "%s",
                 hangmanDisplay,
                 hangman.getMissedLetters(),
@@ -45,59 +42,76 @@ public class HangmanGame {
         );
     }
 
-    public boolean mainLoop() {
-        boolean exit = true;
+    public void run() {
+        boolean exit = false;
+        reset();
         System.out.println("H A N G M A N");
 
         do {
-            System.out.println(displayHangman());
-            guessLetter();
-            if (Boolean.TRUE.equals(hangman.isComplete())) {
+            switch (state) {
+                case GUESSING:
+                    handleGuess();
+                    break;
+
+                case EXIT:
+                    String response = getUserInput("Do you want to play again? (yes or no)");
+                    if (response.equalsIgnoreCase("yes")) {
+                        state = HangmanGameState.GUESSING;
+                    } else {
+                        exit = true;
+                    }
+                    break;
+
+            }
+            if (Boolean.TRUE.equals(hangman.isComplete()) && state == HangmanGameState.GUESSING) {
                 System.out.printf("Yes! The secret word is \"%s\"! You have won!%n", wordToGuess);
-                exit = exitHelp();
+                state = HangmanGameState.EXIT;
             }
-        } while (Boolean.FALSE.equals(hangman.isComplete()));
-        return exit;
-    }
-    private void guessLetter() {
-        boolean guessed = false;
-        while (!guessed) {
-            System.out.println("Guess a letter.");
-            String choice = in.nextLine().trim();
-            if (Character.isDigit( choice.charAt(0) )) {
-                System.out.println("Please enter a letter.");
-                continue;
+            if (state == HangmanGameState.GUESSING) {
+                System.out.println(displayHangman());
             }
-            if (Boolean.TRUE.equals(hangman.isLetterGuessed(choice.charAt(0)))) {
-                System.out.println("You have already guessed that letter. Choose again.");
+            if (hangman.getNumberWrongGuesses() == 6 && state == HangmanGameState.GUESSING) {
+                System.out.printf("Sorry, you are hung! The word was \"%s\".%n", wordToGuess);
+                state = HangmanGameState.EXIT;
             }
-            else {
-                guessed = true;
-                hangman.guessLetter(choice);
-            }
-        }
-    }
-
-    private boolean exitHelp() {
-        String response = "";
-        while (response.equals("")) {
-            System.out.println("Do you want to play again? (yes or no)");
-            response = in.nextLine().strip().trim();
-            System.out.println("\"" + response + "\"");
-        }
-        return !response.equals("yes");
-    }
-
-    public static void run() {
-        boolean exit;
-        do {
-            int randomIndex = random.nextInt( HangmanGame.words.size() - 1 ) ;
-            String secretWord = HangmanGame.words.get(randomIndex);
-            HangmanGame hmg = new HangmanGame(secretWord);
-            exit = hmg.mainLoop();
         } while (!exit);
     }
+
+    public void handleGuess() {
+        String guess = getUserInput("Guess a letter: ");
+
+        if (Character.isDigit(guess.charAt(0))) {
+            System.out.println("Please enter a letter: ");
+        }
+        if (Boolean.TRUE.equals(hangman.isLetterGuessed(guess.charAt(0)))) {
+            System.out.println("You have already guessed that letter. Choose again.");
+        } else {
+            hangman.guessLetter(guess);
+        }
+    }
+
+    public void reset() {
+        words.remove(wordToGuess);
+        int randomIndex = random.nextInt(HangmanGame.words.size() - 1);
+        wordToGuess = HangmanGame.words.get(randomIndex);
+        hangman = new Hangman(wordToGuess);
+    }
+
+    public void reset(String word) {
+        wordToGuess = word;
+        hangman = new Hangman(wordToGuess);
+    }
+
+    public String getUserInput(String prompt) {
+        System.out.println(prompt);
+        return in.nextLine();
+    }
+
+    public String getWordToGuess() {
+        return wordToGuess;
+    }
+
     public static void main(String[] args) {
-        HangmanGame.run();
+        new HangmanGame().run();
     }
 }
